<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:text="Assignment Name"
        android:textSize="18dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etAssignmentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:inputType="textShortMessage"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="Due Date"
        android:textSize="18dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/etDueDate"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assignment Type"
        android:textSize="18dp"/>

    <RadioGroup
        android:id="@+id/radioWeights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

    </RadioGroup>


    <Button
        android:id="@+id/bAddAssignment"
        android:text ="Add Assignment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:textColor="@color/colorText"
        android:background="@color/colorPrimary"/>


</LinearLayout>
