<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Homepage" />
        <item
            android:id="@+id/nav_course"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="Course" />
        <item
            android:id="@+id/nav_4yearplan"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="Four year plan" />
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="Logout" />
        </menu>
    </item>

</menu>
